--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <script>
-window.location.href="https://ow1.leixd.top:36663";
+window.location.href="https://ow.leixd.cc:26662";
 </script>
 <body>
 </body>
